# mr

./: .gitignore  AGENTS.md  README.md  chk.txt  flutter.bat  flutter.ps1  local.properties  pubspec.yaml  tatus  temp_book.html  temp_chapter_list.html  temp_content.html  temp_index.html  temp_search.html  temp_search2.html
.github/workflows/: build.yml
android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  quickjs_bridge.map
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/example/dan_shenqi/: MainActivity.kt  NativePlugin.kt  NodeRuntime.kt
android/app/src/main/kotlin/com/example/dan_shenqi/analyzeRule/: AnalyzeByJSonPath.kt  AnalyzeByJSoup.kt  AnalyzeByRegex.kt  AnalyzeByXPath.kt  AnalyzeRule.kt  RuleAnalyzer.kt
android/app/src/main/kotlin/com/mr/app/: MainActivity.kt  NativePlugin.kt  NodeRuntime.kt
android/app/src/main/kotlin/com/mr/app/analyzeRule/: AnalyzeByJSonPath.kt  AnalyzeByJSoup.kt  AnalyzeByRegex.kt  AnalyzeByXPath.kt  AnalyzeRule.kt  RuleAnalyzer.kt
assets/js_polyfill/: console-utils.js  fallback-polyfill.js  java-bridge.js
assets/templates/: book_source_guide.md  book_source_help.md  book_source_js_file_template.js  book_source_js_help.md  book_source_js_template.json  debug_api_guide.md
d/: 1.md  1.source.js  1780703262.json  1780804782.json  template.source.js  test_jsouplite.js
ios/: .gitignore  Podfile
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/QuickJS/: QuickJS.podspec
ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  NativePlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lib/: log.txt  main.dart
lib/models/: book.dart  book_source.dart  chapter.dart
lib/models/rules/: content_rule.dart
lib/pages/bookshelf/: bookshelf_page.dart
lib/pages/debug/: book_source_debug_page.dart  crash_log_panel.dart  debug_page.dart
lib/pages/detail/: chapter_list_page.dart  detail_page.dart
lib/pages/discovery/: discovery_page.dart
lib/pages/explore/: explore_show_page.dart
lib/pages/main/: main_page.dart
lib/pages/miniprogram/: miniprogram_page.dart
lib/pages/player/: audio_player_page.dart  video_player_page.dart
lib/pages/profile/: backup_restore_page.dart  book_source_edit_page.dart  book_source_import_page.dart  book_source_manage_page.dart  bookmark_page.dart  dict_rule_page.dart  js_source_edit_page.dart  profile_page.dart  read_record_page.dart  replace_rule_page.dart  storage_manage_page.dart  txt_toc_rule_page.dart
lib/pages/reader/: comic_reader_page.dart  novel_reader_page.dart
lib/pages/search/: search_page.dart
lib/pages/settings/: ai_settings_page.dart  theme_settings_page.dart
lib/pages/splash/: splash_page.dart
lib/pages/web/: internal_browser_page.dart
lib/providers/: app_provider.dart  bookshelf_provider.dart  discovery_provider.dart  explore_show_provider.dart  reader_provider.dart  search_provider.dart
lib/routes/: app_routes.dart
lib/services/: app_logger.dart  book_data_provider.dart  book_source_import_service.dart  chapter_cache_service.dart  chapter_prefetch_service.dart  cover_config_service.dart  crash_log_service.dart  debug_service.dart  image_decode_provider.dart  nojs_engine.dart  read_record_service.dart  reader_tts_manager.dart  source_debug_service.dart  storage_service.dart
lib/services/local_book/: epub_parser.dart  local_book_service.dart  txt_parser.dart
lib/services/native/: dio_ssl_helper_io.dart  dio_ssl_helper_stub.dart  engine_dispatcher.dart  js_advanced_service.dart  js_engine.dart  platform_bridge.dart  platform_channel.dart  quickjs_runtime.dart  quickjs_runtime_stub.dart  rust_bridge.dart  shared_js_scope.dart
lib/services/source_engine/: analyze_rule.dart  analyze_url.dart  js_engine.dart  js_engine_native.dart  legado_json_path.dart  legado_xpath.dart  proxy_service.dart  source_engine.dart  web_book.dart  web_proxy.dart
lib/themes/: app_theme.dart
lib/utils/: app_colors.dart  constants.dart  share_helper.dart
lib/widgets/: android_switch.dart  book_card.dart  common_widgets.dart  keyboard_assist_toolbar.dart  liquid_glass_view.dart  themed_background.dart
lib/widgets/reader/: reader_control_overlay.dart  reader_settings_sheet.dart
native_core/: bridge_init.c  bridge_init.h
ohos/sign/: debug.cer
quickjs/: QuickJS.podspec  batch_decompress.c  batch_decompress.h  quickjs.c  quickjs_bridge.c  quickjs_bridge.cmake  quickjs_bridge.h
quickjs/crypto/: aes.c  aes.h  hmac_sha256.c  hmac_sha256.h  md5.c  md5.h  sha1.c  sha1.h  sha256.c  sha256.h
quickjs/ohos/: CMakeLists.txt
sign/ohos/: debug.p12
test/: book_source_compat_test.dart  crypto_native_test.dart  legado_rule_test.dart  test_invariant_quickjs.c
tools/: cors-proxy.js
tools/native-proxy/: Cargo.toml  index.js  package.json
tools/native-proxy/src/: crypto.rs  http.rs  js.rs  jsoup.rs  lib.rs  url_parser.rs
web/: index.html  manifest.json
