[package]
name = "native-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
scraper = "0.20"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
hex = "0.4"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
boa_engine = "0.19"
boa_gc = "0.19"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = true
